mpegts: support items in extended event descriptor

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=672478